--- a/src/components/todoList/TodoList.scss
+++ b/src/components/todoList/TodoList.scss
@@ -13,7 +13,8 @@
   .todo__inputs {
     display: flex;
     align-items: center;
-    flex-direction: column;
+    // flex-direction: column;
+    gap: 15px;
   }
   &__header {
     flex: 30%;
@@ -35,7 +36,9 @@
     border-top-left-radius: 8px;
     padding-left: 10px;
     font-size: 17px;
+    padding: 8px 12px;
     border: 1px solid gray;
+    // border: 1px solid red;
   }
   &__header button {
     padding: 13px 25px;
@@ -44,6 +47,17 @@
     border-bottom-right-radius: 8px;
     padding-left: 10px;
     cursor: pointer;
+    color: white;
+    background-color: blueviolet;
+    font-weight: 600;
+    font-size: 16px;
+
+    margin-left: 15px;
+  }
+  &__header button:hover {
+    box-shadow: 0px 0px 31px 3px rgba(63, 151, 171, 0.75);
+    -webkit-box-shadow: 0px 0px 31px 3px rgba(63, 151, 171, 0.75);
+    -moz-box-shadow: 0px 0px 31px 3px rgba(63, 151, 171, 0.75);
   }
   &__List {
     flex: 70%;
@@ -63,7 +77,7 @@
   margin: 15px;
   //   padding: 3px 10px;
 }
-.task .content {
+.content {
   flex: 80%;
   height: 100%;
   display: flex;
@@ -71,9 +85,11 @@
   align-items: center;
   padding-left: 7px;
 }
-.task .content {
-  display: grid;
+.content {
+  display: flex;
+  padding: 0px 20px;
   place-items: center;
+
   border: 1px solid white;
   width: 100%;
   height: 100%;
@@ -91,4 +107,16 @@
   border-bottom-right-radius: 8px;
   color: white;
   cursor: pointer;
+}
+span {
+  display: inline;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 600;
+  font-family: sans-serif;
+  font-style: normal;
+  font-variant: inherit;
+  color: rgb(27, 107, 125);
 }
